# image-overlay-tool

./: .gitignore  deploy_v1.4.6.sh  index.html  package-lock.json  package.json  맥버전_복구.sh  빠른테스트_v1.4.6.sh  수정완료_v1.4.6_텍스트박스문제해결.md
.github/workflows/: build.yml
.xwin-cache/dl/: Microsoft.VC.14.44.17.14.CRT.Headers.base.vsix  Win11SDK_10.0.26100_headers.msi  Win11SDK_10.0.26100_libs_x86_64.msi  Win11SDK_10.0.26100_store_headers.msi  Win11SDK_10.0.26100_store_headers_onecoreuap.msi  Win11SDK_10.0.26100_store_libs.msi  Win11SDK_10.0.26100_uap_headers.msi  Win11SDK_10.0.26100_x64_headers.msi
.xwin-cache/unpack/Microsoft.VC.14.44.17.14.CRT.x64.Desktop.base.vsix/: tree.txt
.xwin-cache/unpack/Microsoft.VC.14.44.17.14.CRT.x64.Desktop.base.vsix/lib/x64/: libompd.lib  libvcruntimed.lib
.xwin-cache/unpack/Microsoft.VC.14.44.17.14.CRT.x64.Store.base.vsix/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_headers.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_libs_x86_64.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_store_headers.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_store_headers_onecoreuap.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_store_libs.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_store_libs.msi/lib/um/arm64/: User32.Lib  (+21 more)
.xwin-cache/unpack/Win11SDK_10.0.26100_uap_headers.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_x64_headers.msi/: tree.txt
.xwin-cache/unpack/ucrt.msi/: tree.txt
scripts/: test_text_fix.sh
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+24 files in other folders)
